--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
   <style>
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; line-height: 1.6; background: #f8f9fa; }
     header { background: #222; color: #fff; padding: 20px 0; text-align: center; }
-    header img { max-height: 60px; }
+    header img { max-height: 100px; margin-top: 10px; }
     nav { background: #333; padding: 10px 0; text-align: center; }
     nav a { color: #fff; margin: 0 15px; text-decoration: none; font-weight: bold; }
     .container { max-width: 1100px; margin: auto; padding: 20px; }
     .hero { background: #e8e8e8; padding: 50px 20px; text-align: center; }
+    .hero img { max-width: 300px; border-radius: 12px; box-shadow: 0 0 12px rgba(0,0,0,0.2); margin-bottom: 20px; }
     .hero h1 { font-size: 2.5em; margin-bottom: 10px; }
     .section { margin: 40px 0; }
     .section h2 { color: #222; }
@@ -35,6 +36,7 @@
   </nav>
 
   <div class="hero">
+    <img src="vending.jpg" alt="Smart Vending Machine">
     <h1>Vending Solutions You Can Count On</h1>
     <p>Serving businesses, schools, and public locations with top-quality vending machines.</p>
   </div>
